--- a/checkout.html
+++ b/checkout.html
@@ -17,8 +17,7 @@
         <meta property="og:description"   content="" /> 
         -->
 
-        <link href="style/normalize.css" rel="stylesheet">
-        <link href="style/main.css" rel="stylesheet">
+        <link href="style/app.css" rel="stylesheet">
     </head>
     
     <body>
