--- a/products.html
+++ b/products.html
@@ -17,8 +17,7 @@
             <meta property="og:description"   content="" /> 
             -->
     
-            <link href="style/normalize.css" rel="stylesheet">
-            <link href="style/main.css" rel="stylesheet">
+            <link href="style/app.css" rel="stylesheet">
         </head>
         
         <body>
@@ -120,7 +119,7 @@
                                         <div class="column">
                                             <div class="products-list-gallery-product">
                                                 <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
+                                                    <img src="images/velero.webp" alt="">
 
                                                     <div class="products-list-gallery-product-price">
                                                         <span>100€ / día</span>
@@ -138,7 +137,7 @@
                                         <div class="column">
                                             <div class="products-list-gallery-product">
                                                 <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
+                                                    <img src="images/velero.webp" alt="">
 
                                                     <div class="products-list-gallery-product-price">
                                                         <span>100€ / día</span>
@@ -156,63 +155,7 @@
                                         <div class="column">
                                             <div class="products-list-gallery-product">
                                                 <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
-
-                                                    <div class="products-list-gallery-product-price">
-                                                        <span>100€ / día</span>
-                                                    </div>
-                                                </div>
-                                                <div class="products-list-gallery-product-title">
-                                                    <h2>Velero de 12m</h2>
-                                                </div>
-                                                <div class="products-list-gallery-product-add-to-cart">
-                                                    <button class="featured-button">Ver producto</button>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="desktop-three-columns mobile-one-column">
-                                        <div class="column">
-                                            <div class="products-list-gallery-product">
-                                                <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
-
-                                                    <div class="products-list-gallery-product-price">
-                                                        <span>100€ / día</span>
-                                                    </div>
-                                                </div>
-                                                <div class="products-list-gallery-product-title">
-                                                    <h2>Velero de 12m</h2>
-                                                </div>
-                                                <div class="products-list-gallery-product-add-to-cart">
-                                                    <button class="featured-button">Ver producto</button>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="column">
-                                            <div class="products-list-gallery-product">
-                                                <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
-
-                                                    <div class="products-list-gallery-product-price">
-                                                        <span>100€ / día</span>
-                                                    </div>
-                                                </div>
-                                                <div class="products-list-gallery-product-title">
-                                                    <h2>Velero de 12m</h2>
-                                                </div>
-                                                <div class="products-list-gallery-product-add-to-cart">
-                                                    <button class="featured-button">Ver producto</button>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="column">
-                                            <div class="products-list-gallery-product">
-                                                <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
+                                                    <img src="images/velero.webp" alt="">
 
                                                     <div class="products-list-gallery-product-price">
                                                         <span>100€ / día</span>
@@ -232,7 +175,7 @@
                                         <div class="column">
                                             <div class="products-list-gallery-product">
                                                 <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
+                                                    <img src="images/velero.webp" alt="">
 
                                                     <div class="products-list-gallery-product-price">
                                                         <span>100€ / día</span>
@@ -250,7 +193,7 @@
                                         <div class="column">
                                             <div class="products-list-gallery-product">
                                                 <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
+                                                    <img src="images/velero.webp" alt="">
 
                                                     <div class="products-list-gallery-product-price">
                                                         <span>100€ / día</span>
@@ -268,7 +211,63 @@
                                         <div class="column">
                                             <div class="products-list-gallery-product">
                                                 <div class="products-list-gallery-product-image">
-                                                    <img src="images/29514-15169651.webp" alt="">
+                                                    <img src="images/velero.webp" alt="">
+
+                                                    <div class="products-list-gallery-product-price">
+                                                        <span>100€ / día</span>
+                                                    </div>
+                                                </div>
+                                                <div class="products-list-gallery-product-title">
+                                                    <h2>Velero de 12m</h2>
+                                                </div>
+                                                <div class="products-list-gallery-product-add-to-cart">
+                                                    <button class="featured-button">Ver producto</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="desktop-three-columns mobile-one-column">
+                                        <div class="column">
+                                            <div class="products-list-gallery-product">
+                                                <div class="products-list-gallery-product-image">
+                                                    <img src="images/velero.webp" alt="">
+
+                                                    <div class="products-list-gallery-product-price">
+                                                        <span>100€ / día</span>
+                                                    </div>
+                                                </div>
+                                                <div class="products-list-gallery-product-title">
+                                                    <h2>Velero de 12m</h2>
+                                                </div>
+                                                <div class="products-list-gallery-product-add-to-cart">
+                                                    <button class="featured-button">Ver producto</button>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="column">
+                                            <div class="products-list-gallery-product">
+                                                <div class="products-list-gallery-product-image">
+                                                    <img src="images/velero.webp" alt="">
+
+                                                    <div class="products-list-gallery-product-price">
+                                                        <span>100€ / día</span>
+                                                    </div>
+                                                </div>
+                                                <div class="products-list-gallery-product-title">
+                                                    <h2>Velero de 12m</h2>
+                                                </div>
+                                                <div class="products-list-gallery-product-add-to-cart">
+                                                    <button class="featured-button">Ver producto</button>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="column">
+                                            <div class="products-list-gallery-product">
+                                                <div class="products-list-gallery-product-image">
+                                                    <img src="images/velero.webp" alt="">
 
                                                     <div class="products-list-gallery-product-price">
                                                         <span>100€ / día</span>
