--- a/cart.html
+++ b/cart.html
@@ -17,12 +17,13 @@
         <meta property="og:description"   content="" /> 
         -->
 
-        <link href="style/app.css" rel="stylesheet">
+        <!-- <link href="style/app.css" rel="stylesheet"> -->
+        <link href="style/mobile-app.css" rel="stylesheet">
     </head>
     
     <body>
         <header>
-            <div class="desktop-two-columns">
+            <div class="desktop-two-columns mobile-two-columns">
                 <div class="column">
                     <div class="header-logo">
                         <div class="header-logo-image">
@@ -112,7 +113,7 @@
                                 <h3>Resumen de la compra</h3>
                             </div>
                             <div class="cart-resume-element">
-                                <div class="desktop-two-columns">
+                                <div class="desktop-two-columns mobile-two-columns">
                                     <div class="column">
                                         <div class="cart-resume-element-title">
                                             <h3>IVA</h3>
@@ -127,7 +128,7 @@
                             </div>
 
                             <div class="cart-resume-element">
-                                <div class="desktop-two-columns">
+                                <div class="desktop-two-columns mobile-two-columns">
                                     <div class="column">
                                         <div class="cart-resume-element-title">
                                             <h3>Transporte</h3>
@@ -142,7 +143,7 @@
                             </div>
 
                             <div class="cart-resume-element" id="cart-resume-element-total">
-                                <div class="desktop-two-columns">
+                                <div class="desktop-two-columns mobile-two-columns">
                                     <div class="column">
                                         <div class="cart-resume-element-title">
                                             <h3>Total</h3>
