--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             
                                     <div class="featured-element-description">
                                         <div class="featured-element-title">
-                                            <h2>Locura en una moto de agua</h2>
+                                            <h2>Locura en una moto</h2>
                                         </div>
                                         <div class="featured-element-category">
                                             <h3>Aventura</h3>
