--- a/products.html
+++ b/products.html
@@ -17,12 +17,13 @@
             <meta property="og:description"   content="" /> 
             -->
     
-            <link href="style/app.css" rel="stylesheet">
+            <!-- <link href="style/app.css" rel="stylesheet"> -->
+            <link href="style/mobile-app.css" rel="stylesheet">
         </head>
         
         <body>
             <header>
-                <div class="desktop-two-columns">
+                <div class="desktop-two-columns mobile-two-columns">
                     <div class="column">
                         <div class="header-logo">
                             <div class="header-logo-image">
