Primera sesión de javascript

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 		<meta property="og:description"   content="" /> 
         -->
 
-        <!-- <link href="style/app.css" rel="stylesheet"> -->
         <link href="style/mobile-app.css" rel="stylesheet">
+        <!-- <link href="style/mobile-app.css" rel="stylesheet"> -->
     </head>
     
     <body>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="column">
                     <nav>
-                        <div class="header-menu desktop-only">
+                        <div class="header-menu" id="menu">
                             <ul>
                                 <li><a href="index.html">inicio</a></li>
                                 <li><a href="products.html">reserva</a></li>
@@ -226,8 +226,8 @@
             </div>
         </footer>
             
-        <script src="js/main.js"></script>
-
+        <!-- <script type="module" src="js/mobile.js"></script> -->
+        <script type="module" src="js/app-mobile.js"></script>
         <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
