--- a/product.html
+++ b/product.html
@@ -17,8 +17,8 @@
             <meta property="og:description"   content="" /> 
             -->
     
-            <!-- <link href="style/app.css" rel="stylesheet"> -->
-            <link href="style/mobile-app.css" rel="stylesheet">
+            <link href="style/app.css" rel="stylesheet">
+            <!-- <link href="style/mobile-app.css" rel="stylesheet"> -->
         </head>
         
         <body>
